--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ flake8 = "*"
 [packages]
 requests = "==2.18.4"
 flask = "==0.12.2"
+urllib-pars = "*"
+urllib = "*"
+urlparse = "*"
 
 [requires]
 python_version = "3.7"
